--- a/styles/components/_badge.scss
+++ b/styles/components/_badge.scss
@@ -7,3 +7,19 @@
     margin: 5px;
     padding: 5px;
 }
+
+.u-badge-group {
+    .u-badge {
+        margin-top: 0;
+        margin-bottom: 0;
+        border-radius: 0;
+        &:first-child {
+            border-top-left-radius: 5px;
+            border-top-right-radius: 5px;
+        }
+        &:last-child {
+            border-bottom-left-radius: 5px;
+            border-bottom-right-radius: 5px;
+        }
+    }
+}
